[package]
name = "nesnes"
version = "0.1.0"
authors = ["yufrice <yufyuf@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
auto_enums = { version = "0.5", features = ["std", "transpose_methods"]}
sdl2 = { version = "0.32.2", default_features = false, features = ["unsafe_textures", "ttf"]}
log = "0.4.0"
env_logger = "0.6.1"
